Fixing books looking misaligned

--- a/src/app/book-list/book-list.component.css
+++ b/src/app/book-list/book-list.component.css
@@ -1,14 +1,14 @@
-#title{
-    font-family: 'Calligraffitti';
-    font-size: 2.5em;
-    text-align: center;
-}
+/*#title{*/
+    /*font-family: 'Calligraffitti';*/
+    /*font-size: 2.5em;*/
+    /*text-align: center;*/
+/*}*/
 
-.book-name{
-    color: black;
-    font-family: 'Righteous', cursive;
-    font-size: 1.2em;
-}
+/*.book-name{*/
+    /*color: black;*/
+    /*font-family: 'Righteous', cursive;*/
+    /*font-size: 1.2em;*/
+/*}*/
 
 
 /*.btn{
@@ -23,8 +23,8 @@ button{
 
 
 
-img{
-    width: 200px;
+
+img {
+    height: 120px;
+    width: auto;
 }
-
-
